# self-learn-dl-tf-vs-pt

./: Intro.ipynb  MNIST Pytorch.ipynb  MNIST TF.ipynb  TF.ipynb  pyproject.toml
