[tool.poetry]
name = "deep-learning-self-learn"
version = "0.1.0"
description = ""
authors = ["sourcepirate <sathyanarrayanan@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.18.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
